--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -16,7 +16,7 @@
   position: relative;
   width: 691px;
   height: 1251px;
-  background-image: url("/Petrrr.png");
+  background-image: url("/Petrr1.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: -15px -5px;
@@ -220,7 +220,7 @@
       overflow: hidden;
       cursor: pointer;
       top: -1%;
-      right: -135px;
+      right: -320px;
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
@@ -251,7 +251,7 @@
   position: relative;
   width: 613px;
   height: 1250px;
-  background-image: url("/Annaaa.png");
+  background-image: url("/AnnaI.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -262,14 +262,14 @@
     .descImage {
       cursor: pointer;
       position: absolute;
-      top: 58%;
-      left: 1%;
-
+      top: 76%;
+      left: -19%;
+      opacity: 0.85;
       width: 230px;
       &:hover {
         transform: scale(1.02);
       }
-      height: 170px;
+      height: 320px;
       transition: all 250ms ease-in-out;
     }
   }
@@ -309,6 +309,26 @@
       &:hover {
         transform: scale(2.5);
         transform-origin: bottom;
+        z-index: 3;
+      }
+    }
+    .Text1 {
+      width: 190px;
+      height: 165px;
+      overflow: hidden;
+      background-color: rgba(0, 0, 0, 0.5);
+      transition: all 250ms ease-in-out;
+      position: absolute;
+      z-index: 2;
+      font-size: 9.8px;
+      color: #fff;
+      text-align: justify;
+      padding: 2px;
+      bottom: 2%;
+      left: 21%;
+      &:hover {
+        transform: scale(2.5);
+        transform-origin: bottom;
       }
     }
 
@@ -327,19 +347,16 @@
         transform: scale(1.03);
       }
     }
-
-    .imgDescMap {
-      z-index: 1;
-      width: 420px;
-      height: 261px;
+    .imgVilgelm {
+      z-index: 2;
+      width: 200px;
+      height: 254px;
       overflow: hidden;
       cursor: pointer;
       transition: all 250ms ease-in-out;
       position: absolute;
-      border-radius: 15px;
-      top: 10%;
-      right: -66%;
-      opacity: 0.8;
+      top: -12%;
+      left: 66.8%;
       &:hover {
         transform: scale(1.03);
       }
@@ -352,7 +369,7 @@
   border-bottom: 0.3px solid #fff;
   width: 945px;
   height: 1250px;
-  background-image: url("/Elizavetaaa.png");
+  background-image: url("/ElizI.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -485,7 +502,7 @@
   position: relative;
   width: 1330px;
   height: 1250px;
-  background-image: url("/Ekaterinaaa.png");
+  background-image: url("/EkatII.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -668,7 +685,7 @@
   position: relative;
   width: 380px;
   height: 1250px;
-  background-image: url("/Pavelll.png");
+  background-image: url("/PavI.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: -330px center;
