--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -586,7 +586,7 @@
       text-align: justify;
       padding: 2px;
       bottom: 39%;
-      right: -2%;
+      right: 0%;
       &:hover {
         transform: scale(3);
         transform-origin: center;
@@ -596,13 +596,12 @@
     .imgSmoking {
       z-index: 1;
       width: 200px;
-      height: 261px;
-      top: 10%;
-      right: -17%;
+      height: 150px;
+      top: 31%;
+      right: -22%;
       cursor: pointer;
       transition: all 250ms ease-in-out;
       position: absolute;
-      border-radius: 15px;
       &:hover {
         transform: scale(1.03);
       }
@@ -641,9 +640,8 @@
       width: 185px;
       height: 260px;
       position: absolute;
-      top: 45%;
-      border-radius: 15px;
-      right: 13%;
+      bottom: -30%;
+      right: 30%;
       cursor: pointer;
       transition: all 250ms ease-in-out;
       &:hover {
@@ -675,9 +673,8 @@
       height: 261px;
       cursor: pointer;
       position: absolute;
-      top: 10%;
-      left: 15%;
-      border-radius: 15px;
+      top: -12%;
+      right: 12%;
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
@@ -685,13 +682,12 @@
     }
     .imgDescMelissino {
       width: 200px;
-      height: 261px;
+      height: 241px;
       cursor: pointer;
       position: absolute;
-      top: 10%;
-      left: 33%;
+      top:28%;
+      right: 12%;
       opacity: 0.9;
-      border-radius: 15px;
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
@@ -703,7 +699,7 @@
       cursor: pointer;
       position: absolute;
       top: 10%;
-      left: 51%;
+      right: -30%;
       border-radius: 15px;
       transition: all 250ms ease-in-out;
       &:hover {
@@ -714,9 +710,10 @@
       width: 200px;
       height: 261px;
       cursor: pointer;
+      z-index: 2;
       position: absolute;
       top: 10%;
-      right: 16%;
+      right: -20%;
       border-radius: 15px;
       transition: all 250ms ease-in-out;
       &:hover {
@@ -726,12 +723,11 @@
     .imgSmoking {
       z-index: 1;
       width: 200px;
-      height: 261px;
+      height: 150px;
       cursor: pointer;
       position: absolute;
-      top: 10%;
-      right: -3%;
-      border-radius: 15px;
+      top: 31%;
+      right: 58%;
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
@@ -739,12 +735,11 @@
     }
     .imgCadets {
       width: 200px;
-      height: 281px;
+      height: 271px;
       cursor: pointer;
       position: absolute;
-      bottom: 5%;
-      left: 10%;
-      border-radius: 15px;
+      bottom: 2%;
+      left: 20%;
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
@@ -755,9 +750,8 @@
       height: 281px;
       cursor: pointer;
       position: absolute;
-      bottom: 5%;
-      left: 29%;
-      border-radius: 15px;
+      bottom: 2%;
+      left: 39%;
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
@@ -765,29 +759,44 @@
     }
     .imgZnamya {
       width: 200px;
-      height: 281px;
+      height: 271px;
       cursor: pointer;
       position: absolute;
-      bottom: 5%;
-      left: 57%;
-      border-radius: 15px;
+      bottom: 2%;
+      left: 1%;
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
       }
     }
+    .imgGeneralPlan2 {
+      width: 240px;
+      height: 178px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 5.1%;
+      right: 0%;
+      z-index: 2;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        z-index:3;
+        transform: scale(3);
+        transform-origin: bottom;
+      }
+    }
     .imgPlan {
       z-index: 1;
-      width: 400px;
-      height: 281px;
+      width: 240px;
+      height: 180px;
       cursor: pointer;
       position: absolute;
       bottom: 5%;
-      right: -6%;
-      border-radius: 15px;
+      right: 18%;
       transition: all 250ms ease-in-out;
       &:hover {
-        transform: scale(1.03);
+        transform: scale(3);
+        transform-origin: bottom;
+        z-index: 3;
       }
     }
   }
@@ -1097,19 +1106,7 @@
         transform: scale(1.03);
       }
     }
-    .imgGeneralPlan2 {
-      width: 410px;
-      height: 281px;
-      cursor: pointer;
-      position: absolute;
-      bottom: 5%;
-      left: 5%;
-      border-radius: 15px;
-      transition: all 250ms ease-in-out;
-      &:hover {
-        transform: scale(1.03);
-      }
-    }
+
     .imgZnamya1844 {
       width: 200px;
       height: 281px;
