--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -697,10 +697,10 @@
       width: 190px;
       height: 261px;
       cursor: pointer;
+      z-index:2;
       position: absolute;
-      top: 10%;
-      right: -30%;
-      border-radius: 15px;
+      top: -12%;
+      right: -21%;
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
@@ -708,13 +708,12 @@
     }
     .imgDescArakcheev {
       width: 200px;
-      height: 261px;
+      height: 171px;
       cursor: pointer;
       z-index: 2;
       position: absolute;
-      top: 10%;
-      right: -20%;
-      border-radius: 15px;
+      top: 28.1%;
+      right: -21.3%;
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
@@ -817,32 +816,18 @@
     width: 380px;
     height: 1250px;
     .imgPlanTown {
-      width: 260px;
+      width: 350px;
       height: 261px;
       cursor: pointer;
       position: absolute;
-      top: 53%;
-      left: 23%;
-      border-radius: 15px;
+      bottom: 2%;
+      left: 4%;
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
       }
     }
-    .imgEkaterinaDesc {
-      width: 200px;
-      height: 281px;
-      cursor: pointer;
-      position: absolute;
-      bottom: 2.5%;
-      opacity: 0.85;
-      left: 38%;
-      border-radius: 15px;
-      transition: all 250ms ease-in-out;
-      &:hover {
-        transform: scale(1.03);
-      }
-    }
+
   }
 }
 .imp6 {
