--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -982,12 +982,13 @@
     width: 846px;
     height: 600px;
     .imgDesc1 {
+      z-index: 2;
       width: 185px;
       height: 260px;
       position: absolute;
-      top: 45%;
-      border-radius: 15px;
-      left: 5%;
+      bottom: -30%;
+
+      right: -12%;
       cursor: pointer;
       transition: all 250ms ease-in-out;
       &:hover {
@@ -1010,12 +1011,11 @@
     }
     .imgDesc3 {
       z-index: 1;
-      width: 205px;
-      height: 260px;
+      width: 140px;
+      height: 180px;
       position: absolute;
-      top: 45%;
-      border-radius: 15px;
-      right: -27%;
+      bottom: -62.5%;
+      right: -3%;
       cursor: pointer;
       transition: all 250ms ease-in-out;
       &:hover {
@@ -1028,88 +1028,175 @@
     width: 846px;
     height: 650px;
     bottom: 0%;
-    .imgZubov {
+    .imgZub {
       width: 200px;
       height: 261px;
       cursor: pointer;
       position: absolute;
-      top: 10%;
-      left: 3%;
-      border-radius: 15px;
+      top: -12%;
+      left: 8%;
+
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
       }
     }
-    .imgKorpus {
-      width: 190px;
+    .imgSmokingAlex1 {
+      width: 300px;
+      height: 171px;
+      cursor: pointer;
+      position: absolute;
+      top: 30%;
+      left: 4%;
+      z-index: 2;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgKonst {
+      width: 200px;
       height: 261px;
       cursor: pointer;
       position: absolute;
-      top: 10%;
-      left: 29%;
-      opacity: 0.95;
-      border-radius: 15px;
+      top: -12%;
+      left: 50%;
+
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
       }
     }
-    .imgVolont {
-      width: 190px;
-      height: 261px;
+    .imgZubov {
+      width: 140px;
+      height: 180px;
       cursor: pointer;
       position: absolute;
-      top: 10%;
-      left: 55%;
-      opacity: 0.95;
-      border-radius: 15px;
+      top: 30%;
+      left: 69%;
+
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
       }
     }
+    .descKorpus {
+      width: 210px;
+      height: 250px;
+      overflow: hidden;
+      background-color: rgba(0, 0, 0, 0.5);
+      transition: all 250ms ease-in-out;
+      position: absolute;
+      z-index: 2;
+      font-size: 7.2px;
+      color: #fff;
+      text-align: justify;
+      padding: 2px;
+      bottom: 3%;
+      left: 4%;
+      &:hover {
+        transform: scale(3);
+        transform-origin: bottom;
+        z-index: 3;
+      }
+    }
+    .descKorpus2 {
+      width: 210px;
+      height: 250px;
+      overflow: hidden;
+      background-color: rgba(0, 0, 0, 0.5);
+      transition: all 250ms ease-in-out;
+      position: absolute;
+      z-index: 2;
+      font-size: 7.2px;
+      color: #fff;
+      text-align: justify;
+      padding: 2px;
+      bottom: 3%;
+      left: 32%;
+      &:hover {
+        transform: scale(3);
+        transform-origin: bottom;
+        z-index: 3;
+      }
+    }
+    .descKorpus3 {
+      width: 210px;
+      height: 165px;
+      overflow: hidden;
+      background-color: rgba(0, 0, 0, 0.5);
+      transition: all 250ms ease-in-out;
+      position: absolute;
+      z-index: 2;
+      font-size: 7.2px;
+      color: #fff;
+      text-align: justify;
+      padding: 2px;
+      bottom: 44%;
+      left: 42%;
+      &:hover {
+        transform: scale(3);
+        transform-origin: bottom;
+        z-index: 3;
+      }
+    }
+
     .imgExcercirgaus {
       z-index: 1;
-      width: 190px;
-      height: 261px;
+      width: 200px;
+      height: 145px;
       cursor: pointer;
       position: absolute;
-      top: 10%;
-      right: -4%;
+      bottom: 3%;
+      right: 18%;
       opacity: 0.95;
-      border-radius: 15px;
+
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
       }
     }
-    .imgProjectStone {
-      width: 400px;
-      height: 281px;
-      cursor: pointer;
+    .descExcercirgaus {
+      width: 200px;
+      height: 108px;
+      overflow: hidden;
+      background-color: rgba(0, 0, 0, 0.5);
+      transition: all 250ms ease-in-out;
       position: absolute;
-      bottom: 5%;
-      left: 3%;
-      border-radius: 15px;
-      transition: all 250ms ease-in-out;
+      z-index: 2;
+      font-size: 7.5px;
+      color: #fff;
+      text-align: justify;
+      padding: 2px;
+      bottom: 25%;
+      right: 18%;
       &:hover {
-        transform: scale(1.03);
+        transform: scale(3);
+        transform-origin: bottom;
+        z-index: 3;
       }
     }
-    .imgProjectEkaterinaII {
-      width: 190px;
-      height: 281px;
-      cursor: pointer;
+    .descShtat {
+      width: 200px;
+      height: 250px;
+      overflow: hidden;
+      background-color: rgba(0, 0, 0, 0.5);
+      transition: all 250ms ease-in-out;
       position: absolute;
-      bottom: 5%;
-      left: 54%;
-      border-radius: 15px;
-      transition: all 250ms ease-in-out;
+      z-index: 2;
+      font-size: 7px;
+      color: #fff;
+      text-align: justify;
+      padding: 2px;
+      bottom: 3%;
+      right: -13%;
       &:hover {
-        transform: scale(1.03);
+        transform: scale(3);
+        transform-origin: bottom;
+        z-index: 3;
       }
     }
+
     .imgSmokingAlexI {
       z-index: 1;
       width: 190px;
