--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -122,7 +122,7 @@
       color: #fff;
       overflow: hidden;
       width: 280px;
-      height: 150px;
+      height: 155px;
       top: 35%;
       position: absolute;
       left: 46%;
@@ -132,6 +132,10 @@
       &:hover {
         transform: scale(2.5);
         transition: all 250ms ease-in-out;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 0.7px solid #efc074;
+        border-radius: 5px;
+        padding: 3px;
         z-index: 4;
       }
     }
@@ -177,7 +181,8 @@
       &:hover {
         transform: scale(2.2);
         transform-origin: bottom left;
-
+        border: 2px solid #efc074;
+        border-radius: 5px;
         z-index: 4;
       }
     }
@@ -200,7 +205,7 @@
       font-size: 6.5px;
       background-color: rgba(0, 0, 0, 0.5);
       width: 170px;
-      height: 130px;
+      height: 133px;
       position: absolute;
       overflow: hidden;
       bottom: 1%;
@@ -209,7 +214,11 @@
       &:hover {
         transform: scale(2.5);
         transform-origin: bottom;
-        z-index: 3;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
+        z-index: 4;
+        padding: 3px;
       }
     }
     .imgMinih {
@@ -294,7 +303,7 @@
     }
     .Text {
       width: 205px;
-      height: 165px;
+      height: 172px;
       overflow: hidden;
       background-color: rgba(0, 0, 0, 0.5);
       transition: all 250ms ease-in-out;
@@ -310,6 +319,9 @@
       &:hover {
         transform: scale(2.5);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 0.8px solid #efc074;
+        border-radius: 5px;
         z-index: 4;
       }
     }
@@ -330,6 +342,9 @@
       &:hover {
         transform: scale(2.5);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
@@ -380,6 +395,9 @@
       &:hover {
         transform: scale(4);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 4;
       }
     }
@@ -428,6 +446,9 @@
       &:hover {
         transform: scale(2.5);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
@@ -501,7 +522,7 @@
     }
     .textSuvorov {
       width: 280px;
-      height: 160px;
+      height: 163px;
       overflow: hidden;
       background-color: rgba(0, 0, 0, 0.5);
       transition: all 250ms ease-in-out;
@@ -515,6 +536,9 @@
       left: 2%;
       &:hover {
         transform: scale(3);
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         transform-origin: bottom;
         z-index: 4;
       }
@@ -536,6 +560,9 @@
       &:hover {
         transform: scale(2.5);
         transform-origin: center;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
@@ -569,7 +596,7 @@
 
     .textSchool {
       width: 250px;
-      height: 230px;
+      height: 238px;
       overflow: hidden;
       background-color: rgba(0, 0, 0, 0.5);
       transition: all 250ms ease-in-out;
@@ -584,7 +611,11 @@
       &:hover {
         transform: scale(3);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 0.7px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
+        padding: 3px;
       }
     }
     .imgVilboa {
@@ -617,6 +648,9 @@
       &:hover {
         transform: scale(3);
         transform-origin: center;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
@@ -711,6 +745,9 @@
       &:hover {
         transform: scale(3);
         transform-origin: center;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
@@ -770,6 +807,9 @@
       &:hover {
         transform: scale(3);
         transform-origin: center;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
@@ -788,7 +828,7 @@
     }
     .textMedalion {
       width: 210px;
-      height: 120px;
+      height: 123px;
       overflow: hidden;
       background-color: rgba(0, 0, 0, 0.5);
       transition: all 250ms ease-in-out;
@@ -803,6 +843,9 @@
       &:hover {
         transform: scale(3);
         transform-origin: center;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 0.8px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
@@ -860,6 +903,9 @@
       &:hover {
         transform: scale(3);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
@@ -947,6 +993,7 @@
       &:hover {
         transform: scale(3);
         transform-origin: bottom;
+
         z-index: 3;
       }
     }
@@ -961,6 +1008,7 @@
       &:hover {
         transform: scale(3);
         transform-origin: bottom;
+
         z-index: 3;
       }
     }
@@ -1097,12 +1145,15 @@
       &:hover {
         transform: scale(3);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
     .descKorpus2 {
       width: 210px;
-      height: 250px;
+      height: 253px;
       overflow: hidden;
       background-color: rgba(0, 0, 0, 0.5);
       transition: all 250ms ease-in-out;
@@ -1117,6 +1168,9 @@
       &:hover {
         transform: scale(3);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
@@ -1137,6 +1191,9 @@
       &:hover {
         transform: scale(3);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
@@ -1173,12 +1230,15 @@
       &:hover {
         transform: scale(3);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
     .descShtat {
       width: 200px;
-      height: 250px;
+      height: 256px;
       overflow: hidden;
       background-color: rgba(0, 0, 0, 0.5);
       transition: all 250ms ease-in-out;
@@ -1193,6 +1253,9 @@
       &:hover {
         transform: scale(3);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
@@ -1287,7 +1350,7 @@
     }
     .descSenat {
       width: 260px;
-      height: 180px;
+      height: 183px;
       overflow: hidden;
       background-color: rgba(0, 0, 0, 0.5);
       transition: all 250ms ease-in-out;
@@ -1302,6 +1365,9 @@
       &:hover {
         transform: scale(3);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 0.5px solid #efc074;
+        border-radius: 3px;
         z-index: 3;
       }
     }
@@ -1336,7 +1402,56 @@
       right: -53%;
       &:hover {
         transform: scale(3);
-        transform-origin: bottom;
+        transform-origin: center;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
+        z-index: 3;
+      }
+    }
+    .descReforma {
+      width: 225px;
+      height: 135px;
+      overflow: hidden;
+      background-color: rgba(0, 0, 0, 0.5);
+      transition: all 250ms ease-in-out;
+      position: absolute;
+      z-index: 2;
+      font-size: 7.5px;
+      color: #fff;
+      text-align: justify;
+      padding: 2px;
+      top: -12%;
+      right: -81%;
+      &:hover {
+        transform: scale(3);
+        transform-origin: center;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
+        z-index: 3;
+      }
+    }
+    .descReforma1 {
+      width: 120px;
+      height: 138px;
+      overflow: hidden;
+      background-color: rgba(0, 0, 0, 0.5);
+      transition: all 250ms ease-in-out;
+      position: absolute;
+      z-index: 2;
+      font-size: 7.5px;
+      color: #fff;
+      text-align: justify;
+      padding: 2px;
+      top: 10%;
+      right: -70.7%;
+      &:hover {
+        transform: scale(3);
+        transform-origin: center;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
@@ -1372,6 +1487,9 @@
         transform: scale(3);
         transform-origin: bottom;
         z-index: 3;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
       }
     }
     .imgChernishevskiy {
@@ -1405,6 +1523,9 @@
       &:hover {
         transform: scale(3);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
@@ -1466,12 +1587,15 @@
       &:hover {
         transform: scale(3);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
     .descFlag2 {
       width: 330px;
-      height: 80px;
+      height: 78px;
       overflow: hidden;
       background-color: rgba(0, 0, 0, 0.5);
       transition: all 250ms ease-in-out;
@@ -1486,6 +1610,9 @@
       &:hover {
         transform: scale(3);
         transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
         z-index: 3;
       }
     }
@@ -1521,60 +1648,56 @@
         transform: scale(1.03);
       }
     }
-    .img1863 {
-      width: 190px;
-      height: 261px;
-      cursor: pointer;
-      position: absolute;
-      top: 10%;
-      right: 11%;
-      border-radius: 15px;
-      transition: all 250ms ease-in-out;
-      &:hover {
-        transform: scale(1.03);
-      }
-    }
-    .imgCadets1887 {
-      border: 1px solid #948e8e;
-      z-index: 1;
-      width: 190px;
-      height: 261px;
-      cursor: pointer;
-      position: absolute;
-      top: 10%;
-      right: -14%;
-      border-radius: 15px;
-      transition: all 250ms ease-in-out;
-      &:hover {
-        transform: scale(1.03);
-      }
-    }
 
-    .imgChurchNevskiy {
-      width: 410px;
-      height: 281px;
+    .imgCadets1887 {
+      z-index: 1;
+      width: 110px;
+      height: 140px;
       cursor: pointer;
       position: absolute;
-      bottom: 5%;
-      left: 38%;
-      border-radius: 15px;
+      top: 10%;
+      right: 5%;
+
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
       }
     }
-    .imgSoyuzov {
+    .imgCadets2 {
       z-index: 1;
-      width: 200px;
-      height: 281px;
+      width: 245px;
+      height: 120px;
       cursor: pointer;
       position: absolute;
-      bottom: 5%;
-      right: -11%;
-      border-radius: 15px;
+      top: 33%;
+      right: 5%;
+
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
+      }
+    }
+    .descMonah {
+      width: 240px;
+      height: 310px;
+      overflow: hidden;
+      background-color: rgba(0, 0, 0, 0.5);
+      transition: all 250ms ease-in-out;
+      position: absolute;
+      z-index: 2;
+      font-size: 7.6px;
+      color: #fff;
+      text-align: justify;
+      padding: 2px;
+      bottom: 0.5%;
+      right: 5%;
+      &:hover {
+        transform: scale(3);
+        transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
+        z-index: 3;
       }
     }
   }
