--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -1720,18 +1720,46 @@
     position: absolute;
     .imgMordovin {
       z-index: 1;
-      width: 420px;
+      width: 400px;
       height: 261px;
       cursor: pointer;
       position: absolute;
-      top: 10%;
-      left: 35%;
-      border-radius: 15px;
+      top: -12%;
+      left: -4%;
+
       transition: all 250ms ease-in-out;
       &:hover {
-        transform: scale(1.03);
+        transform: scale(3);
+        transform-origin: center;
+        z-index: 2;
+        border: 1px solid #efc074;
+        border-radius: 10px;
       }
     }
+    .descNev {
+      width: 400px;
+      height: 97px;
+      overflow: hidden;
+      background-color: rgba(0, 0, 0, 0.5);
+      transition: all 250ms ease-in-out;
+      position: absolute;
+      z-index: 2;
+      font-size: 8px;
+      color: #fff;
+      text-align: justify;
+      padding: 2px;
+      top: 30%;
+      left: -4%;
+      &:hover {
+        transform: scale(3);
+        transform-origin: bottom;
+        background-color: rgba(57, 53, 53, 0.95);
+        border: 1px solid #efc074;
+        border-radius: 5px;
+        z-index: 3;
+      }
+    }
+
     .imgAltarNevskiy {
       z-index: 1;
       width: 420px;
